tests/errors/test_39.xpp
// No field present on enum

enum Boolean { TRUE, FALSE }

fn main() void {
	let x = Boolean::MAYBE;
}
